--- a/src/style/login.css
+++ b/src/style/login.css
@@ -178,7 +178,7 @@ a{
     }
     .login{
         width: 400px;
-        min-height: 100vh;
+        height: 100vh;
     }
     .send_btn{
         width: 30%;
